[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["tanimon <8575113+tanimon@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pendulum = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
